--- a/StockApp/app/src/main/res/layout/activity_items.xml
+++ b/StockApp/app/src/main/res/layout/activity_items.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#e2a600"
-    tools:context=".ItemsActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="#Fdfdfd"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="Металлы" />
+        android:textSize="18sp"
+        android:text="Добавить"
+        android:onClick="add"
+        app:layout_constraintBottom_toTopOf="@+id/list"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/addButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/itemsList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="30dp" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
